go-pingpong/service-go-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: go-pingpong
  ports:
  - port: 3334
    protocol: TCP
    targetPort: 3001
