go-pingpong/ingress-1.09.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-109
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: go-main-app-svc
          servicePort: 3333
      - path: /pingpong
        pathType: Prefix
        backend:
          serviceName: go-pingpong-svc
          servicePort: 3334
